--- a/regex/package.yaml
+++ b/regex/package.yaml
@@ -34,7 +34,17 @@ library:
 executables:
   regex-exe:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         app/regex-exe
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - regex
+  
+  hgrep:
+    main: Main.hs
+    source-dirs: app/hgrep
     ghc-options:
     - -threaded
     - -rtsopts
