--- a/sed/package.yaml
+++ b/sed/package.yaml
@@ -26,16 +26,24 @@ library:
   source-dirs: src
 
 executables:
-  sed-exe:
+  cat:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         app/cat
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - sed
-
+  sed:
+    main:                Main.hs
+    source-dirs:         app/sed
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - sed
 tests:
   sed-test:
     main:                Spec.hs
