--- a/jsonmunging/package.yaml
+++ b/jsonmunging/package.yaml
@@ -1,14 +1,14 @@
-name:                jsonmunging
-version:             0.1.0.0
-github:              "githubuser/jsonmunging"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+name: jsonmunging
+version: 0.1.0.0
+github: 'githubuser/jsonmunging'
+license: BSD3
+author: 'Author name here'
+maintainer: 'example@example.com'
+copyright: '2019 Author name here'
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,35 +17,39 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/jsonmunging#readme>
+description: Please see the README on GitHub at <https://github.com/githubuser/jsonmunging#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- aeson >1.4
-- text >1
-- bytestring >0
+  - base >= 4.7 && < 5
+  - aeson >1.4
+  - text >1
+  - bytestring >0
+  - bytestring
+  - mtl
+  - containers
+  - optparse-applicative
 
 library:
   source-dirs: src
 
 executables:
   jsonmunging-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - jsonmunging
+      - jsonmunging
 
 tests:
   jsonmunging-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - jsonmunging
+      - jsonmunging
