--- a/streamdata/package.yaml
+++ b/streamdata/package.yaml
@@ -25,14 +25,15 @@ dependencies:
   - conduit == 1.3.1.1
   - streamly == 0.6.1
   - pipes == 4.3.13
+  # - mtl == 2.2.2
 
 library:
   source-dirs: src
 
 executables:
-  streamdata-exe:
+  streamly:
     main: Main.hs
-    source-dirs: app
+    source-dirs: app/streamly
     ghc-options:
       - -threaded
       - -rtsopts
