--- a/streamdata/package.yaml
+++ b/streamdata/package.yaml
@@ -25,7 +25,9 @@ dependencies:
   - conduit == 1.3.1.1
   - streamly == 0.6.1
   - pipes == 4.3.13
-  # - mtl == 2.2.2
+  - mtl == 2.2.2
+  - path-io == 1.4.2
+  - path == 0.6.1
 
 library:
   source-dirs: src
