--- a/csvmunging/package.yaml
+++ b/csvmunging/package.yaml
@@ -21,7 +21,10 @@ description: Please see the README on GitHub at <https://github.com/githubuser/c
 
 dependencies:
   - base >= 4.7 && < 5
-  - summoner == 1.3.0.1
+  - cassava == 0.5.2.0
+  - time == 1.8.0.2
+  - text == 1.2.3.1
+  - bytestring
 
 library:
   source-dirs: src
@@ -47,3 +50,4 @@ tests:
       - -with-rtsopts=-N
     dependencies:
       - csvmunging
+      - hspec
