--- a/streamdata/package.yaml
+++ b/streamdata/package.yaml
@@ -23,11 +23,12 @@ description: Please see the README on GitHub at <https://github.com/githubuser/s
 dependencies:
   - base >= 4.7 && < 5
   - conduit == 1.3.1.1
-  - streamly == 0.6.1
+  - streamly == 0.7.0
   - pipes == 4.3.13
   - mtl == 2.2.2
   - path-io == 1.4.2
   - path == 0.6.1
+  - text == 1.2.3.1
 
 library:
   source-dirs: src
@@ -45,6 +46,15 @@ executables:
   pipeline:
     main: Main.hs
     source-dirs: app/pipeline
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - streamdata
+  recur:
+    main: Main.hs
+    source-dirs: app/recur
     ghc-options:
       - -threaded
       - -rtsopts
