--- a/streamdata/package.yaml
+++ b/streamdata/package.yaml
@@ -29,6 +29,8 @@ dependencies:
   - path-io == 1.4.2
   - path == 0.6.1
   - text == 1.2.3.1
+  - filepath == 1.4.2.1
+  - containers == 0.6.0.1
 
 library:
   source-dirs: src
