--- a/streamdata/package.yaml
+++ b/streamdata/package.yaml
@@ -1,10 +1,10 @@
 name: streamdata
 version: 0.1.0.0
-github: 'githubuser/streamdata'
+github: "githubuser/streamdata"
 license: BSD3
-author: 'Author name here'
-maintainer: 'example@example.com'
-copyright: '2019 Author name here'
+author: "Author name here"
+maintainer: "example@example.com"
+copyright: "2019 Author name here"
 
 extra-source-files:
   - README.md
@@ -31,7 +31,8 @@ dependencies:
   - text == 1.2.3.1
   - filepath == 1.4.2.1
   - containers == 0.6.0.1
-
+  - io-streams
+  - random == 1.1
 library:
   source-dirs: src
 
